# seek-helper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
seek_helper/: http_helper.py  seek_helper.py  test.py
seek_helper/assets/: data_file.py
seek_helper/experiments/: assay.py  investigation.py  study.py
seek_helper/yellow_pages/: project.py
src/seek_helper/: __init__.py  http_helper.py  seek_helper.py  test.py
src/seek_helper/assets/: data_file.py
src/seek_helper/experiments/: assay.py  investigation.py  study.py
src/seek_helper/yellow_pages/: institution.py  people.py  programme.py  project.py
test/: test_http_helper.py
tests/: test_assay.py  test_data_file.py  test_http_helper.py  test_institution.py  test_investigation.py  test_people.py  test_programme.py  test_project.py  test_study.py
