[project]
name = "seek-helper"
version = "0.1.0"
authors = [
  { name="Danilo Bueno", email="dbueno@ed.ac.uk" },
]
description = "A library to facilitate the use of the FAIRDOM-SEEK API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pytest",
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
